--- a/templates/header.html
+++ b/templates/header.html
@@ -2,4 +2,46 @@
 <head>
     <meta  charset="utf-8"/>
     <title>{{ title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="http://localhost:8000/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<div class="navbar navbar-inverse">
+<div class="navbar-inner">
+<div class="container-fluid"><a class="btn btn-navbar" data-target=".navbar-responsive-collapse" data-toggle="collapse"> </a> <a class="brand" contenteditable="true" href="#">学生作业管理系统</a>
+
+<div class="nav-collapse collapse navbar-responsive-collapse">
+<ul class="nav" contenteditable="true">
+	<li class="active"><a href="#">主页</a></li>
+	<li><a href="#">链接</a></li>
+	<li><a href="#">链接</a></li>
+	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">下拉菜单 </a>
+	<ul class="dropdown-menu">
+		<li><a href="#">下拉导航1</a></li>
+		<li><a href="#">下拉导航2</a></li>
+		<li><a href="#">其他</a></li>
+		<li class="divider">&nbsp;</li>
+		<li class="nav-header">标签</li>
+		<li><a href="#">链接1</a></li>
+		<li><a href="#">链接2</a></li>
+	</ul>
+	</li>
+</ul>
+
+<ul class="nav pull-right" contenteditable="true">
+	<li><a href="#">右边链接</a></li>
+	<li class="divider-vertical">&nbsp;</li>
+	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">下拉菜单 </a>
+	<ul class="dropdown-menu">
+		<li><a href="#">下拉导航1</a></li>
+		<li><a href="#">下拉导航2</a></li>
+		<li><a href="#">其他</a></li>
+		<li class="divider">&nbsp;</li>
+		<li><a href="#">链接3</a></li>
+	</ul>
+	</li>
+</ul>
+</div>
+<!-- /.nav-collapse --></div>
+</div>
+<!-- /navbar-inner --></div>
+
 </head> 
