--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 <body><form name="input" action="" method="get">
 
-<table border="1">
+<table class="table table-hover table-condensed">
 	<tr>
 		<th>选择</th>
 		<th>序号</th>
