--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,11 @@
     <meta  charset="utf-8"/>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://localhost:8000/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+{% load staticfiles %}  
+<link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">      
+<script src="http://code.jquery.com/jquery.js"></script>
+{% load staticfiles %}  
+<script  src="{% static "js/bootstrap.min.js" %}"></script>
 	<div class="navbar navbar-inverse">
 <div class="navbar-inner">
 <div class="container-fluid"><a class="btn btn-navbar" data-target=".navbar-responsive-collapse" data-toggle="collapse"> </a> <a class="brand" contenteditable="true" href="#">学生作业管理系统</a>
