--- a/templates/login.html
+++ b/templates/login.html
@@ -49,26 +49,26 @@
     {% endif %}
 	
     <div class="container">
-      <form class="form-signin">
+      <form class="form-signin" method="POST">
 	  <h2 class="form-signin-heading" align="center">学生作业管理系统</h2>
         <input type="text" class="input-block-level" placeholder="请输入你的用户名"  name="user">
         <input type="password" class="input-block-level" placeholder="密码" name="passwd">
 		  <label class="radio inline">
-<input type="radio" name="" id="" value="" checked="">
+<input type="radio" name="role" checked="checked" value="student">
 学生
 </label>
 <label class="radio inline">
-<input type="radio" name="" id="" value="">
+<input type="radio" name="role" value="teacher">
 教师
 </label>
 <label class="radio inline">
-<input type="radio" name="" id="" value="">
+<input type="radio" name="role" value="administrator">
 管理员
 </label>
         <label class="checkbox">
-          <input type="checkbox" value="remember-me">保持在登录状态
+          <input type="checkbox" name="box" value="remember" >保持在登录状态
         </label>
-        <button class="btn btn-large btn-primary" type="submit">登录</button>
+        <button class="btn btn-large btn-primary" type="submit" action="">登录</button>
       </form>
     </div>
 </body>
