--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,5 @@
-{% include "header.html" %}
+{% include "header1.html" %}
  <style type="text/css">
-      body {
-        
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-      }
 
       .form-signin {
         max-width: 300px;
@@ -66,9 +61,9 @@
 管理员
 </label>
         <label class="checkbox">
-          <input type="checkbox" name="box" value="remember" >保持在登录状态
+          <input type="checkbox" name="box" value="remember">保持在登录状态
         </label>
-        <button class="btn btn-large btn-primary" type="submit" action="">登录</button>
+        <button class="button glow button-rounded button-flat-primary btn-block" type="submit" action="">登录</button>
       </form>
     </div>
 </body>
