--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,4 +1,13 @@
 {% include "header.html" %}
+ <style type="text/css">
+      body {
+        
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+
+    </style>
+    
 <body>
 <h3>{{ hint }}</h3></br>
 <form name="input" enctype="multipart/form-data" action="" method="POST">
