--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,16 @@
 <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     </html>
+ <style type="text/css">
+   	footer {
+  background: #333;
+  color: #FFF;
+  padding: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+}
+/* line 320, ../scss/main.scss */
+footer a {
+  color: #666;
+} </style>
