--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -4,8 +4,8 @@
 	<tr>
 		<th>序号</th>
 		<th>课程名</th>
-		<th>课程号/th>
-		<th>课程人数/th>
+		<th>课程号</th>
+		<th>课程人数</th>
 		<th>作业序号</th>
 		<th>已交人数</th>
 		<th>详细信息</th>
