--- a/templates/header.html
+++ b/templates/header.html
@@ -27,9 +27,13 @@
 </head> 
  <style type="text/css">
       body {
-        padding-top: 60px;
+        margin-top: 50px;
         padding-bottom: 40px;
-        background-color: #f5f5f5;
+        background-color: #fff;
+		max-width: 800px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        border: 1px solid #e5e5e5;
       }
     </style>
     
