--- a/templates/header1.html
+++ b/templates/header1.html
@@ -21,7 +21,7 @@
 </head> 
  <style type="text/css">
       body {
-        padding-top: 60px;
+           margin-top: 50px;
         padding-bottom: 40px;
         background-color: #f5f5f5;
       }
