--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
 	  <h2 class="form-signin-heading" align="center">学生作业管理系统</h2>
         <input type="text" class="input-block-level" placeholder="请输入你的用户名"  name="user">
         <input type="password" class="input-block-level" placeholder="密码" name="passwd">
-		  <label class="radio inline">
+		  <label class="radio inline" >
 <input type="radio" name="role" checked="checked" value="student">
 学生
 </label>
@@ -61,6 +61,7 @@
 管理员
 </label>
         <label class="checkbox">
+		<span class="icon"></span><span class="icon-to-fade"></span>
           <input type="checkbox" name="box" value="remember">保持在登录状态
         </label>
         <button class="button glow button-rounded button-flat-primary btn-block" type="submit" action="">登录</button>
