--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,15 +1,12 @@
 {% include "header.html" %}
- <style type="text/css">
-      body {
-        
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-      }
 
-    </style>
     
 <body>
-<h3>{{ hint }}</h3></br>
+</br>
+<h3>提交课程作业</h3>
+{%if hint %}
+<h4>{{ hint }}</h4></br>
+{% endif %}
 <form name="input" enctype="multipart/form-data" action="" method="POST">
 
 <table class="table table-hover table-condensed">
@@ -41,8 +38,24 @@
 </tr>
 {% endfor %}
 </table>
+<h4>请选择提交课程后上传作业</h4>
 <input type="file" name= "File" value="上传文件"/>
-<input type="submit" action=""/>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span4">
+				</div>
+				<div class="span4">
+				<input class="button glow button-rounded button-flat-primary btn-block"  type="submit" action=""/>
+				</div>
+				<div class="span4">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 </form>
 
 </body>
