--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -33,7 +33,7 @@
   <td>{{ i.population }}</td>
   <td>{{ i.assignmentNum }}</td>
   <td>{{ i.expire }}</td>
-  <td><a href="#"><i class="icon-pencil"></i>查看</a></td>
+  <td><a href="{{ i.assignmentDetail }}"><i class="icon-pencil"></i>查看</a></td>
   <td>{{ i.finish }}</td>
 </tr>
 {% endfor %}
