--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,8 +1,5 @@
 {% include "header.html" %}
-
-    
-<body>
-</br>
+<body style="margin-top: 50px;">
 <h3>提交课程作业</h3>
 {%if hint %}
 <h4>{{ hint }}</h4></br>
