--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<html>
+<html style="background-color: #f5f5f5;">
 <head>
     <meta  charset="utf-8"/>
     <title>{{ title }}</title>
@@ -27,7 +27,7 @@
 </head> 
  <style type="text/css">
       body {
-        margin-top: 50px;
+		padding-top: 50px;
         padding-bottom: 40px;
         background-color: #fff;
 		max-width: 800px;
