--- a/templates/checkassign.html
+++ b/templates/checkassign.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-<body>
+<body style="margin-top: 50px;">
 <table class="table table-hover table-condensed">
 	<tr>
 		<th>学号</th>
