--- a/templates/class.html
+++ b/templates/class.html
@@ -1,11 +1,26 @@
 {% include "header.html" %}
-<body>
- {% if hint %}
+<body style="margin-top: 50px;">
+ 
+ <div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span3">
+				</div>
+				<div class="span6">
+				{% if hint %}
  <h3>{{ hint }} </h3>
  {% endif %}
+				</div>
+				<div class="span3">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <form name="input" action="" method="get">
 
-<table border="1">
+<table class="table table-hover table-condensed">
 	<tr>
 		<th>选择</th>
 		<th>学生编号</th>
