--- a/templates/course.html
+++ b/templates/course.html
@@ -1,12 +1,12 @@
 {% include "header.html" %}
-<body>
+<body style="margin-top: 50px;">
  {% if hint %}
  <h3>{{ hint }} </h3>
  {% endif %}
  
 <form name="input" action="" method="get">
 
-<table border="1">
+<table class="table table-hover table-condensed">
 	<tr>
 		<th>选择</th>
 		<th>班级编号</th>
