--- a/templates/class.html
+++ b/templates/class.html
@@ -8,9 +8,13 @@
 				<div class="span3">
 				</div>
 				<div class="span6">
-				{% if hint %}
- <h3>{{ hint }} </h3>
+					<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  	{% if hint %}
+ <h4>{{ hint }} </h4>
  {% endif %}
+</div>
+			
 				</div>
 				<div class="span3">
 				</div>
