--- a/templates/course.html
+++ b/templates/course.html
@@ -1,9 +1,26 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
- {% if hint %}
- <h3>{{ hint }} </h3>
+ <div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span3">
+				</div>
+				<div class="span6">
+					<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  	{% if hint %}
+ <h4>{{ hint }} </h4>
  {% endif %}
- 
+</div>
+			
+				</div>
+				<div class="span3">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <form name="input" action="" method="get">
 
 <table class="table table-hover table-condensed">
