--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,9 +1,31 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
 <h3>提交课程作业</h3>
-{%if hint %}
-<h4>{{ hint }}</h4></br>
-{% endif %}
+<div class="container-fluid" style="display:none;">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span3">
+				</div>
+				<div class="span6">
+				{% if hint %}
+	  	{% if hint %}<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+ <h4>{{ hint }} </h4>
+
+</div> {% endif %}
+			
+				</div>
+				 {% endif %}
+				<div class="span3">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+ 
+
 <form name="input" enctype="multipart/form-data" action="" method="POST">
 
 <table class="table table-hover table-condensed">
@@ -17,7 +39,7 @@
 		<th>作业序号</th>
 		<th>提交期限</th>
 		<th>详细信息</th>
-		<th>是否提交</th>
+		<th>状态</th>
 	</tr>
 {% for i in matrix %}
 <tr class="active">
@@ -30,7 +52,7 @@
   <td>{{ i.population }}</td>
   <td>{{ i.assignmentNum }}</td>
   <td>{{ i.expire }}</td>
-  <td><a href="{{ i.assignmentDetail }}"><i class="icon-pencil"></i>查看</a></td>
+  <td><a href="{{ i.assignmentDetail }}"><i class="icon-list"></i>查看</a></td>
   <td>{{ i.finish }}</td>
 </tr>
 {% endfor %}
