--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -1,23 +1,13 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
-<!-- Button to trigger modal -->
-<a href="#myModal" role="button" class="button glow button-rounded button-flat-primary" data-toggle="modal">添加作业</a>
- 
-<!-- Modal -->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
-  </div>
-  <div class="modal-body">
-    <p>nework函数简直就是不知所云，一个asDate一个txt，又不能选课程，又不能提交id，又不能是表单，那用表格选就还要弹一次，烦不烦啊</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-    <button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
+
 <h3>所属课程状态</h3>
+{% if hint %}<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+ <h4>{{ hint }} </h4>
+
+</div> {% endif %}
 <table class="table table-hover table-condensed">
 	<tr>
 		<th>序号</th>
@@ -29,6 +19,7 @@
 		<th>详细信息</th>
 		<th>批改作业</th>
 		<th>是否批改</th>
+		<th>添加作业</th>
 	</tr>
 {% for i in matrix %}
 <tr>
@@ -55,6 +46,27 @@
 </div></td>
   <td><a href="{{ i.viewassignment }}"><i class="icon-pencil"></i>查看</a></td>
   <td>{{ i.finishPopu }}</td>
+  <td><!-- Button to trigger modal -->
+<a href="#myModaladd{{ i.classNum }}" role="button" class="icon-pencil" data-toggle="modal">添加</a>
+ 
+<!-- Modal -->
+<div id="myModaladd{{ i.classNum }}" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">添加{{ i.courseName }}课程作业</h3>
+  </div>
+  <div class="modal-body">
+    <p> <form action="" method="post">
+        <p>截止时间：将在<input type="text" class="input-small" style="display:inline;" placeholder="Day" name="day">天<input type="text" class="input-small" style="display:inline;" placeholder="Hour" name="day">小时后停止接收作业
+		<p><input type="text" style="display:none;" name="classNum" value="{{ i.classNum }}">
+        <p>详细要求：<textarea rows="5" style="display:inline;" placeholder="请在此输入作业的详细要求如：文件标题及格式规范等" name="txt"></textarea>
+		<div class="modal-footer" style="background-color:#fff">
+    <button class="button button-rounded button-flat" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <button type="submit" class="button glow button-rounded button-flat-primary">添加</button>
+  </div>
+    </form></p>
+  </div>
+</div></td>
 </tr>
 {% endfor %}
 </table>
