--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,6 +1,13 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
 <h3>系统管理页面</h3>
+{% if hint %}<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+ <h4>{{ hint }} </h4>
+
+</div> {% endif %}
+<!--
  <div class="container-fluid" style="display:none;">
 	<div class="row-fluid">
 		<div class="span12">
@@ -8,12 +15,12 @@
 				<div class="span3">
 				</div>
 				<div class="span6">
-				  	{% if hint %}<div class="alert">
+				  	<!--{% if hint %}<div class="alert">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 
  <h4>{{ hint }} </h4>
 
-</div> {% endif %}
+</div> {% endif %}-->
 			
 				</div>
 				<div class="span3">
