--- a/templates/checkassign.html
+++ b/templates/checkassign.html
@@ -1,5 +1,14 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
+{% if hint %}
+{% for hints in hint %}
+<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+ <h4>{{ hint }} </h4>
+
+</div>{% endfor %} 
+{% endif %}
 			<table class="table table-hover table-condensed">
 	<tr>
 		<th>作业编号</th>
