--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,21 +20,15 @@
 
  <h4>{{ hint }} </h4>
 
-</div> {% endif %}-->
-			
-				</div>
+</div> {% endif %}-->		
 				<div class="span3">
 				</div>
-			</div>
-		</div>
-	</div>
-</div>
  
  <div class="tabbable"> <!-- Only required for left/right tabs -->
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#tab1" data-toggle="tab">用户信息</a></li>
-    <li><a href="#tab2" data-toggle="tab">课程信息</a></li>
-	<li><a href="#tab3" data-toggle="tab">班级信息</a></li>
+    <li class="active"><a href="#tab2" data-toggle="tab">课程信息</a></li>
+    <li><a href="#tab3" data-toggle="tab">班级信息</a></li>
+	<li><a href="#tab1" data-toggle="tab">用户信息</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
