--- a/templates/login.html
+++ b/templates/login.html
@@ -70,8 +70,8 @@
       <form class="form-signin" method="POST">
 	  
 	  <h2 class="form-signin-heading" align="center">学生作业管理系统</h2>
-        <input type="text" class="input-block-level" placeholder="请输入你的用户名"  name="user">
-        <input type="password" class="input-block-level" placeholder="密码" name="passwd">
+        <input type="text" class="input-block-level" placeholder="请输入你的用户名"  name="user" required>
+        <input type="password" class="input-block-level" placeholder="密码" name="passwd" required>
 		<label class="radio inline" >
 <input type="radio" name="role" checked="checked" value="student">
 学生
