--- a/templates/header.html
+++ b/templates/header.html
@@ -15,8 +15,8 @@
 
 
 <ul class="nav pull-right" contenteditable="false">
-	<li><a href="../profile">修改资料</a></li>
-	<li><a href="../logout">退出</a></li>
+	<li><a href="http://localhost:8000/profile">修改资料</a></li>
+	<li><a href="http://localhost:8000/logout">退出</a></li>
 	</li>
 </ul>
 </div>
