--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,42 +1,19 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
 <h3>提交课程作业</h3>
-<<<<<<< HEAD
-<div class="container-fluid" style="display:none;">
-	<div class="row-fluid">
-		<div class="span12">
-			<div class="row-fluid">
-				<div class="span3">
-				</div>
-				<div class="span6">
-	  	{% if hint %}<div class="alert">
-=======
 {% if hint %}<div class="alert">
->>>>>>> 3d3697fcab64c905cd566fdf19b9c439a3f40a3d
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 
  <h4>{{ hint }} </h4>
 
 </div> {% endif %}
-<<<<<<< HEAD
-			
-				</div>
-				<div class="span3">
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-=======
->>>>>>> 3d3697fcab64c905cd566fdf19b9c439a3f40a3d
- 
 
 <form name="input" enctype="multipart/form-data" action="" method="POST">
 
 <table class="table table-hover table-condensed">
 	<tr>
 		<th>选择</th>
-		<th>序号</th>
+		<th>班级序号</th>
 		<th>课程名</th>
 		<th>课程号</th>
 		<th>教师</th>
