--- a/templates/login.html
+++ b/templates/login.html
@@ -66,8 +66,49 @@
 <body style="margin-top: 50px;">
 
 	
-    <div class="container">
-      <form class="form-signin" method="POST">
+    <div class="container" style="margin-right: 20px;margin-left: 20px;width: 1200px;"><div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="row-fluid">
+				<div class="span8">
+				<div id="myCarousel" class="carousel slide" style="width: 700px;height: 200px;">
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+                  <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+                  <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="item">
+                    <img src="http://localhost:8000/static/236685_205.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h4>First Thumbnail label</h4>
+                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    </div>
+                  </div>
+                  <div class="item active left">
+                    <img src="http://localhost:8000/static/236686_422.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h4>Second Thumbnail label</h4>
+                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    </div>
+                  </div>
+                  <div class="item next left">
+                    <img src="http://localhost:8000/static/236687_205.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h4>Third Thumbnail label</h4>
+                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+              </div>
+				</div>
+				<div class="span4">
+				<form class="form-signin" method="POST" style="
+    margin-left: 0px;
+    margin-right: 0px;
+">
 	  
 	  <h2 class="form-signin-heading" align="center">学生作业管理系统</h2>
         <input type="text" class="input-block-level" placeholder="请输入你的用户名"  name="user" required>
@@ -90,7 +131,14 @@
         </label>
         <button class="button glow button-rounded button-flat-primary btn-block" type="submit" action="">登录</button>
       </form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+      
     </div>
 </body>
+
 
 {% include "footer.html" %}
