--- a/templates/stuhome.html
+++ b/templates/stuhome.html
@@ -1,6 +1,7 @@
 {% include "header.html" %}
 <body style="margin-top: 50px;">
-<h3>提交课程作业</h3>
+<h3 style="display:inline;">提交课程作业</h3>
+<a href="http://localhost:8000/allview/" class="button glow button-rounded button-flat-action pull-right">查看历史记录</a>
 {% if hint %}<div class="alert">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 
