--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -2,6 +2,7 @@
 <body style="margin-top: 50px;">
 
 <h3>所属课程状态</h3>
+<a href="http://localhost:8000/tallview/" class="button glow button-rounded button-flat-action pull-right">查看历史记录</a>
 {% if hint %}<div class="alert">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 
